src/objects/actionHub__Action__c.object
<CustomObject>
    <description>actionHub Actions</description>
    <fields>
        <fullName>actionHub__ActionName__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__AdapterClass__c</fullName>
        <label>Adapter Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__AdapterName__c</fullName>
        <label>Adapter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__AdapterNamespace__c</fullName>
        <label>Adapter Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__ExecutionOrder__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__MaxRetries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Retries</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__RelaxedExecution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relaxed Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__RetryInterval__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Minutes to wait between retry attempts</description>
        <label>Retry Interval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleId__c</fullName>
        <label>Rule Id</label>
        <referenceTo>actionHub__Rules__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__RuleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnectionId__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceConnectionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnection__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceConnectionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Connection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceObjectAPIName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <formula>actionHub__RuleId__r.actionHub__SourceObjectDisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetAdapter__c</fullName>
        <label>Target Adapter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetConnectionId__c</fullName>
        <label>Target Connection Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetConnection__c</fullName>
        <label>Target Connection</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectAPIName__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__TargetObjectDisplayName__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>